--- a/04-HTML-CSS/final/index.html
+++ b/04-HTML-CSS/final/index.html
@@ -20,13 +20,14 @@
     <h2>Another heading</h2>
     <p class="second">
       Just another paragraph
-    </p>
+    
 
     <img
       id="course-image"
-      src="https://img-a.udemycdn.com/course/480x270/437398_46c3_9.jpg"
+      src="albert-einstein.png"
     />
-
+    <a href="https://www.flaticon.com/free-icons/einstein" title="einstein icons">Einstein icons created by istar_design_bureau - Flaticon</a>
+  </p>
     <form id="your-name">
       <h2>Your name here</h2>
       <p class="first">Please fill in this form :)</p>
